--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@telegram-apps/telegram-ui": "^2.1.9",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^10.18.0",
     "i18next": "^25.3.6",
     "react": "^18.2.0",
     "react-confetti": "^6.4.0",
