--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "i18next": "^25.3.6",
     "react": "^18.2.0",
     "react-confetti": "^6.4.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sooner": "^1.1.4"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.12",
