--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@number-flow/react": "^0.5.10",
     "@telegram-apps/telegram-ui": "^2.1.9",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
