--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "es-toolkit": "^1.39.10",
     "framer-motion": "^10.18.0",
     "i18next": "^25.3.6",
+    "posthog-js": "^1.260.1",
     "react": "^18.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-virtuoso": "^4.14.0",
     "sooner": "^1.1.4"
   },
   "devDependencies": {
