--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.8.1",
     "react-virtuoso": "^4.14.0",
     "sooner": "^1.1.4"
   },
